@@ -48,7 +48,7 @@ def load_igor(path, callback=None, meta_override=None):
     # Metadata
     metadata = {}
     # acquisition
-    metadata["imaging mode"] = "force-distance"
+    metadata["imaging modality"] = "force-distance"
     metadata["feedback mode"] = notes["ImagingMode"].lower()
     metadata["rate approach"] = float(notes["NumPtsPerSec"])
     metadata["rate retract"] = float(notes["NumPtsPerSec"])
@@ -124,6 +124,6 @@ recipe_ibw = {
     "descr": "binarywave",
     "loader": load_igor,
     "suffix": ".ibw",
-    "mode": "force-distance",
+    "modality": "force-distance",
     "maker": "Asylum Research",
 }
