@@ -13,12 +13,12 @@ datadir = pathlib.Path(__file__).resolve().parent / "data"
 def test_export_hdf5():
     """Test for hotfixes in 0.7.1"""
     jpkfile = datadir / "spot3-0192.jpk-force"
-    fdat = afmformats.load_data(jpkfile, mode="force-distance")[0]
+    fdat = afmformats.load_data(jpkfile, modality="force-distance")[0]
     _, path = tempfile.mkstemp(suffix=".h5", prefix="afmformats_test_")
 
     with h5py.File(path, "w") as h5:
-        fdat.export(h5, metadata=True, fmt="hdf5")
-        fdat.export(h5, metadata=True, fmt="hdf5")
+        fdat.export_data(h5, metadata=True, fmt="hdf5")
+        fdat.export_data(h5, metadata=True, fmt="hdf5")
 
     with h5py.File(path, "r") as h5:
         assert h5["0"].attrs["enum"] == 0
@@ -28,7 +28,7 @@ def test_export_hdf5():
 
 def test_segment():
     jpkfile = datadir / "spot3-0192.jpk-force"
-    fdat = afmformats.load_data(jpkfile, mode="force-distance")[0]
+    fdat = afmformats.load_data(jpkfile, modality="force-distance")[0]
 
     s1 = fdat.appr["segment"]
     assert np.all(s1 == 0)
